<?xml version="1.0"?>
<package format="2">
  <name>hello_world</name>
  <version>0.0.1</version>
  <description>
    Sample package to show usage of ros_bridge
  </description>
  <maintainer email="rjcausarano@gmail.com">Rodrigo Causarano</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>